@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-21T16:31:17Z",
-  "count_outdated" : 462,
-  "uniques_outdated" : 258,
-  "count" : 502,
-  "uniques" : 283,
+  "timestamp" : "2022-05-22T01:52:49Z",
+  "count_outdated" : 465,
+  "uniques_outdated" : 260,
+  "count" : 504,
+  "uniques" : 284,
   "clones" : [
-    {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 9,
